# dstruct

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile_make  Makefile_manual  PKGBUILD  README.md  configure.ac  demo.c  meson.build  tester.c
.cache/clangd/index/: bst.c.1F18E4342D841B54.idx  bst.c.CD61B51423FF155A.idx  bst.h.05725E41CECDED91.idx  bst.h.8C311E8A1360246F.idx  demo.c.E1A37BD285BADBBE.idx  dllist.c.C93FE37DAC357AAA.idx  dllist.c.E8672325E112C3AD.idx  dllist.h.15999951B8618C8E.idx  dllist.h.68C8BB1A47BA10FB.idx  dstruct.h.701C3D55C7B9695E.idx  dyarray.c.CB05D0D91AC94BC9.idx  dyarray.c.EF5CF8577AAF65DC.idx  dyarray.h.3E2B9B8562E7EA69.idx  dyarray.h.46604BB158D4F283.idx  llist.c.71A66869A60855DE.idx  llist.c.B5CF39E2223A9749.idx  llist.h.45E3739627332593.idx  llist.h.6AD11DF504FF82FF.idx  stack.c.9CAB3F6CE364059B.idx  stack.c.C1AB56E9CB9B6B05.idx  stack.h.1626BF42686B5A30.idx  stack.h.77E0E155E47AEFA8.idx
.github/workflows/: cmake.yml
dstruct/: CMakeLists.txt
dstruct/include/: bst.h  dllist.h  dstruct.h  dyarray.h  hash_table.h  llist.h  queue.h  stack.h
dstruct/include/dstruct/: bst.h  dstruct.h  dyarray.h  llist.h
dstruct/src/: bst.c  dllist.c  dyarray.c  hash_table.h  llist.c  llist.h  queue.h  stack.c
dstruct/src/.deps/: bst.Plo  dllist.Plo  dyarray.Plo  llist.Plo  stack.Plo
include/: bst.h  dstruct.h  llist.h
include/dstruct/: bst.h  dllist.h  dstruct.h  llist.h  queue.h  stack.h
src/: bst.c  llist.c
tests/: CMakeLists.txt  bst_tests.cpp  llist_tests.cpp  tester.cpp
